# build-python-container-image-best-practice

./: README.rst
alpine/: .dockerignore  Dockerfile  README.rst  main.py  pyproject.toml  requirements.txt
alpine/my_project/: cli.py  say_hello.py
alpine/tests/: test_say_hello.py
slim/: .coveragerc  Dockerfile  README.rst  pyproject.toml  requirements-test.txt  requirements.txt
slim/my_project/: cli.py  show_deps.py
