# Reference:
# - The pyproject.toml file: https://python-poetry.org/docs/pyproject/
# - Dependency specification: https://python-poetry.org/docs/dependency-specification/
[tool.poetry]
name = "my_project"
version = "0.1.1"
description = "Build Python container image best practice"
authors = ["Sanhe Hu <husanhe@gmail.com>"]

# --- core dependencies for deployment
[tool.poetry.dependencies]
python = "3.9.*"
fire = "0.5.0"
polars = "0.17.15"

# --- addtitional dependencies for testing
[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
# pytest framework
pytest = "6.2.5"
# code coverage test
pytest-cov = "2.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
